--- a/views/about.html
+++ b/views/about.html
@@ -31,11 +31,14 @@
 				<ul class="nav navbar-nav">
 					<li><a href="/">Home</a></li>
 					<li class="active"><a href="#">About</a></li>
+					<li><a href="/students/add">Add Student</a></li>
+					<li><a href="/images/add">Add Image</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/students">Students</a></li>
 					<li><a href="/intlstudents">Int'l Students</a></li>
 					<li><a href="/programs">Program</a></li>
+					<li><a href="/images">Images</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
