--- a/views/home.html
+++ b/views/home.html
@@ -36,10 +36,10 @@
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/students">Students</a></li>
-					<li><a href="/intlstudents">Int'l Students</a></li>
-					<li><a href="/programs">Program</a></li>
-					<li><a href="/images">Images</a></li>
+					<li><a href="/students" target="_blank">Students</a></li>
+					<li><a href="/intlstudents" target="_blank">Int'l Students</a></li>
+					<li><a href="/programs" target="_blank">Program</a></li>
+					<li><a href="/images" target="_blank">Images</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
