--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -29,46 +29,29 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Home</a></li>
-					<li><a href="/about">About</a></li>
-					<li><a href="/students/add">Add Student</a></li>
-					<li class="active"><a href="/images/add">Add Image</a></li>
+					{{#navLink "/"}}Home{{/navLink}}
+					{{!-- <li class="active"><a href="#">Home</a></li> --}}
+					{{#navLink "/about"}}About{{/navLink}}
+					{{#navLink "/students/add"}}Add Student{{/navLink}} 
+					{{!-- <li><a href="/students/add">Add Student</a></li> --}}
+					{{#navLink "/images/add"}}Add Image{{/navLink}}
+					{{!-- <li><a href="/images/add">Add Image</a></li> --}}
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/students">Students</a></li>
-					<li><a href="/intlstudents">Int'l Students</a></li>
-					<li><a href="/programs">Program</a></li>
-					<li><a href="/images">Images</a></li>
+					{{#navLink "/students"}}Students{{/navLink}}
+					{{!-- <li><a href="/students">Students</a></li> --}}
+					{{#navLink "/intlstudents"}}Int'l Students{{/navLink}}
+					{{!-- <li><a href="/intlstudents">Int'l Students</a></li> --}}
+					{{#navLink "/programs"}}Programs{{/navLink}}
+					{{!-- <li><a href="/programs">Program</a></li> --}}
+					{{#navLink "/images"}}Images{{/navLink}}
+					{{!-- <li><a href="/images">Images</a></li> --}}
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-		
-				<h1>Add Image</h1>
-				<hr>
-		
-				<form method="post" action="/images/add" enctype="multipart/form-data">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="form-group">
-								<label for="firstName">Image File:</label>
-								<input class="form-control" id="imageFile" name="imageFile" type="file">
-							</div>
-						</div>
-					</div>
-		
-					<hr>
-		
-					<input type="submit" class="btn btn-primary pull-right" value="Add Image"><br><br><br>
-		
-				</form>
-			</div>
-		</div>
-	</div>
+	{{{body}}} <!-- This is where the content will be injected -->
 
 	<!-- Latest compiled and minified jQuery 3.2.1 JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"
