--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -32,16 +32,16 @@
 					{{#navLink "/"}}Home{{/navLink}}
 					{{!-- <li class="active"><a href="#">Home</a></li> --}}
 					{{#navLink "/about"}}About{{/navLink}}
-					{{#navLink "/students/add"}}Add Student{{/navLink}} 
+					{{!-- {{#navLink "/students/add"}}Add Student{{/navLink}}  --}}
 					{{!-- <li><a href="/students/add">Add Student</a></li> --}}
-					{{#navLink "/images/add"}}Add Image{{/navLink}}
+					{{!-- {{#navLink "/images/add"}}Add Image{{/navLink}} --}}
 					{{!-- <li><a href="/images/add">Add Image</a></li> --}}
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{{#navLink "/students"}}Students{{/navLink}}
 					{{!-- <li><a href="/students">Students</a></li> --}}
-					{{#navLink "/intlstudents"}}Int'l Students{{/navLink}}
+					{{!-- {{#navLink "/intlstudents"}}Int'l Students{{/navLink}} --}}
 					{{!-- <li><a href="/intlstudents">Int'l Students</a></li> --}}
 					{{#navLink "/programs"}}Programs{{/navLink}}
 					{{!-- <li><a href="/programs">Program</a></li> --}}
