--- a/views/programs.hbs
+++ b/views/programs.hbs
@@ -1,9 +1,10 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<h2>Programs</h2>
+			<h2>Programs <a href="/programs/add" class="btn btn-success pull-right">Add New Program</a></h2>
 			<hr>
 			<div class="table-responsive">
+				{{#if programs}}
 				<table class="table ">
 					<thead>
 						<tr>
@@ -14,17 +15,16 @@
 					<tbody>
 						{{#each programs}}
 						<tr>
-							<td><a href="/students?program={{this.programCode}}">{{this.programCode}}</a></td>
-							<td><a href="/students?program={{this.programCode}}">{{this.programName}}</a></td>
+							<td><a href="/program/{{programCode}}">{{programCode}}</a></td>
+							<td><a href="/program/{{programCode}}">{{programName}}</a></td>
+							<td><a href="/programs/delete/{{programCode}}" class="btn btn-danger">remove</a></td>
 						</tr>
 						{{/each}}
-						{{#unless programs}}
-							<div class="col-md-12 text-center">
-								<strong>{{message}}</strong>
-							</div>
-						{{/unless}}
 					</tbody>
 				</table>
+				{{else}}
+				<p>No programs found</p>
+				{{/if}}
 			</div>
 
 		</div>
