--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,3 +1,22 @@
+{{!-- o If session.user exists (ie: the user is logged in), show the following HTML:
+<form class="navbar-form navbar-right">
+	<div class="dropdown">
+		<button class="btn btn-primary dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown">
+			<span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{session.user.userName}}&nbsp;&nbsp;<span
+				class="caret"></span>
+		</button>
+		<ul class="dropdown-menu" aria-labelledby="userMenu">
+			<li><a href="/userHistory">User History</a></li>
+			<li><a href="/logout">Log Out</a></li>
+		</ul>
+	</div>
+</form>
+<ul class="nav navbar-nav navbar-right">
+	{{#navLink "/images"}}Images{{/navLink}}
+	{{#navLink "/employees"}}Employees{{/navLink}}
+	{{#navLink "/departments"}}Departments{{/navLink}}
+</ul>
+--}}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,24 +49,32 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					{{#navLink "/"}}Home{{/navLink}}
-					{{!-- <li class="active"><a href="#">Home</a></li> --}}
 					{{#navLink "/about"}}About{{/navLink}}
-					{{!-- {{#navLink "/students/add"}}Add Student{{/navLink}}  --}}
-					{{!-- <li><a href="/students/add">Add Student</a></li> --}}
-					{{!-- {{#navLink "/images/add"}}Add Image{{/navLink}} --}}
-					{{!-- <li><a href="/images/add">Add Image</a></li> --}}
-
 				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					{{#navLink "/students"}}Students{{/navLink}}
-					{{!-- <li><a href="/students">Students</a></li> --}}
-					{{!-- {{#navLink "/intlstudents"}}Int'l Students{{/navLink}} --}}
-					{{!-- <li><a href="/intlstudents">Int'l Students</a></li> --}}
-					{{#navLink "/programs"}}Programs{{/navLink}}
-					{{!-- <li><a href="/programs">Program</a></li> --}}
-					{{#navLink "/images"}}Images{{/navLink}}
-					{{!-- <li><a href="/images">Images</a></li> --}}
-				</ul>
+					{{#if session.user}}
+					<form class="navbar-form navbar-right">
+						<div class="dropdown">
+							<button class="btn btn-primary dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown">
+								<span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{session.user.userName}}&nbsp;&nbsp;<span
+									class="caret"></span>
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="userMenu">
+								<li><a href="/userHistory">User History</a></li>
+								<li><a href="/logout">Log Out</a></li>
+							</ul>
+						</div>
+					</form>
+					<ul class="nav navbar-nav navbar-right">
+						{{#navLink "/images"}}Images{{/navLink}}
+						{{#navLink "/students"}}Students{{/navLink}}
+						{{#navLink "/programs"}}Programs{{/navLink}}
+					</ul>
+					{{else}}
+						<form class="navbar-form navbar-right">
+						<a href="/register" class="btn btn-success"><span class="glyphicon glyphicon-cog"></span>&nbsp;&nbsp;Register</a>
+						<a href="/login" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span>&nbsp;&nbsp;Log In</a>
+						</form>
+					{{/if}}
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
