--- a/views/students.hbs
+++ b/views/students.hbs
@@ -21,14 +21,15 @@
 					<tbody>
 						{{#each students}}
 						<tr>
-							<td><a href="/student/{{this.studentID}}">{{this.studentID}}</a></td>
-							<td>{{this.firstName}} {{this.lastName}}</td>
+							<td><a href="/student/{{this.studentId}}">{{this.studentId}}</a></td>
+							<td> <a href="/student/{{this.studentId}}">{{this.firstName}} {{this.lastName}}</a></td>
 							<td><a href="mailto:{{this.email}}">{{this.email}}</a></td>
 							<td>{{this.addressStreet}}<br>{{this.addressCity}}<br>{{this.addressState}} {{this.addressPostal}}</td>
 							<td><a href="/students?credential={{this.expectedCredential}}">{{this.expectedCredential}}</a></td>
 							<td><a href="/students?status={{this.status}}">{{this.status}}</a></td>
-							<td><a href="/students?program={{this.program}}">{{this.program}}</a></td>
+							<td><a href="/program/{{this.program}}">{{this.program}}</a></td>
 							<td>{{this.registrationDate}}</td>
+							<td><a href="/students/delete/{{this.studentId}}" class="btn btn-danger">remove</a></td>
 						</tr>
 						{{/each}}
 					</tbody>
