--- a/views/students.hbs
+++ b/views/students.hbs
@@ -27,7 +27,7 @@
 							<td>{{this.addressStreet}}<br>{{this.addressCity}}<br>{{this.addressState}} {{this.addressPostal}}</td>
 							<td><a href="/students?credential={{this.expectedCredential}}">{{this.expectedCredential}}</a></td>
 							<td><a href="/students?status={{this.status}}">{{this.status}}</a></td>
-							<td><a href="/program/{{this.program}}">{{this.program}}</a></td>
+							<td><a href="/students?program={{this.program}}">{{this.program}}</a></td>
 							<td>{{this.registrationDate}}</td>
 							<td><a href="/students/delete/{{this.studentId}}" class="btn btn-danger">remove</a></td>
 						</tr>
